# SaGD

./: CLAUDE.md  EXPERIMENTS.md  LICENSE  README.md  pyproject.toml
configs/: default.yaml
scripts/: diagnose_saliency.py  evaluate.py  generate_responses.py  gpt_judge.py  precompute_teacher_saliency.py  train.py
src/sagd/: __init__.py  data.py  evaluation.py  gpt_judge.py  losses.py  models.py  saliency.py  trainer.py
src/sagd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_data.py  test_evaluation.py  test_losses.py  test_saliency.py  test_trainer.py
